--- a/squealy/squealy-web/public/index.html
+++ b/squealy/squealy-web/public/index.html
@@ -12,7 +12,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Hidash</title>
+    <title>Squealy</title>
   </head>
   <body>
     <div id="root"></div>
